ChallengeService Test Case (#171)

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -52,19 +52,19 @@
                         <div class="text-xs font-bold p-2">C</div>
                     </a>
                     <a href="/?subject=project" class="flex flex-col items-center group">
-                        <img th:src="@{${@photoService.getCategoryPhoto('project-logo.png')}}" class="rounded-full h-20 w-20 transition-all duration-300 transform group-hover:scale-110 shadow-lg">
+                        <img th:src="@{${@photoService.getCategoryPhoto('project-logo1.png')}}" class="rounded-full h-20 w-20 transition-all duration-300 transform group-hover:scale-110 shadow-lg">
                         <div class="text-xs font-bold p-2">프로젝트</div>
                     </a>
                     <a href="/?subject=coding" class="flex flex-col items-center group">
-                        <img th:src="@{${@photoService.getCategoryPhoto('codingtest-logo.png')}}" alt="DevChall" class="rounded-full h-20 w-20 transition-all duration-300 transform group-hover:scale-110 shadow-lg">
+                        <img th:src="@{${@photoService.getCategoryPhoto('codingtest-logo1.png')}}" alt="DevChall" class="rounded-full h-20 w-20 transition-all duration-300 transform group-hover:scale-110 shadow-lg">
                         <div class="text-xs font-bold p-2">코딩테스트</div>
                     </a>
                     <a href="/?subject=study" class="flex flex-col items-center group">
-                        <img th:src="@{${@photoService.getCategoryPhoto('개념공부-logo.png')}}" class="rounded-full h-20 w-20 transition-all duration-300 transform group-hover:scale-110 shadow-lg">
+                        <img th:src="@{${@photoService.getCategoryPhoto('개념공부-logo1.png')}}" class="rounded-full h-20 w-20 transition-all duration-300 transform group-hover:scale-110 shadow-lg">
                         <div class="text-xs font-bold p-2">개념 공부</div>
                     </a>
                     <a href="/?subject=test" class="flex flex-col items-center group">
-                        <img th:src="@{${@photoService.getCategoryPhoto('시험대비-logo.png')}}" class="rounded-full h-20 w-20 transition-all duration-300 transform group-hover:scale-110 shadow-lg">
+                        <img th:src="@{${@photoService.getCategoryPhoto('시험대비-logo1.png')}}" class="rounded-full h-20 w-20 transition-all duration-300 transform group-hover:scale-110 shadow-lg">
                         <div class="text-xs font-bold p-2">시험 대비</div>
                     </a>
                 </div>
