--- a/src/main/resources/templates/usr/challenge/postdetail.html
+++ b/src/main/resources/templates/usr/challenge/postdetail.html
@@ -242,7 +242,7 @@
                             outline: none;
                         }
                     </style>
-<!--                    <button type="submit" class="mx-1 mt-3 custom-button btn btn-outline disabled" th:unless="${mem}">-->
+                    <button type="submit" class="mx-1 mt-3 custom-button btn btn-outline disabled">
                         <i class="fas fa-paper-plane" style="color: #000000"></i>
                     </button>
                 </form>
