--- a/src/main/resources/templates/usr/challenge/create_form.html
+++ b/src/main/resources/templates/usr/challenge/create_form.html
@@ -215,19 +215,19 @@
 
 
                         <div class="flex flex-row justify-between mt-3 ml-10">
-                            <label for="my_modal_6" class="mt-5 custom-button mr-14 ml-0 mx-5 btn btn-sm font-bold border-none w-1/2">생성 규칙 보기</label>
-                            <input type="checkbox" id="my_modal_6" class="w-1/3 modal-toggle modal-warning"/>
+                            <label for="my_modal_9" class="mt-5 custom-button mr-14 ml-0 mx-5 btn btn-sm font-bold border-none w-1/2">생성 규칙 보기</label>
+                            <input type="checkbox" id="my_modal_9" class="w-1/3 modal-toggle modal-warning"/>
                             <div class="modal">
                                 <div class="modal-box">
-                                    <h3 class="font-bold text-lg">챌린지 생성 규칙</h3>
-                                    <p class="py-4">1. 챌린지 제목은 중복될 수 없습니다.</p>
-                                    <p class="py-4">2. 챌린지 제목은 25자 까지 작성 가능합니다.</p>
-                                    <p class="py-4">3. 챌린지 내용은 500자 까지 작성 가능합니다.</p>
-                                    <p class="py-4">4. 챌린지 시작일은 내일부터 지정 가능합니다.</p>
-                                    <p class="py-4">5. 첨부 파일의 확장자 명은 JPG, JPEG, PNG, GIF 만 가능합니다.</p>
-                                    <p class="py-4">6. 이미지가 첨부되지 않은 경우, 기본 이미지로 설정 됩니다.</p>
+                                    <h3 class="font-bold text-2xl mb-4">챌린지 생성 규칙 👊</h3>
+                                    <p class="py-2">1. 챌린지 제목은 중복될 수 없습니다.</p>
+                                    <p class="py-2">2. 챌린지 제목은 25자 까지 작성 가능합니다.</p>
+                                    <p class="py-2">3. 챌린지 내용은 500자 까지 작성 가능합니다.</p>
+                                    <p class="py-2">4. 챌린지 시작일은 내일부터 지정 가능합니다.</p>
+                                    <p class="py-2">5. 첨부 파일의 확장자 명은 JPG, JPEG, PNG, GIF 만 가능합니다.</p>
+                                    <p class="py-2">6. 이미지가 첨부되지 않은 경우, 기본 이미지로 설정 됩니다.</p>
                                     <div class="modal-action">
-                                        <label for="my_modal_6" class="btn btn-md">닫기 X</label>
+                                        <label for="my_modal_9" class="btn btn-sm btn-primary border-none align-items-center w-full" style="background-color: #03FA6E; color: #121212">닫기</label>
                                     </div>
                                 </div>
                             </div>
