--- a/src/main/resources/templates/usr/member/layout.html
+++ b/src/main/resources/templates/usr/member/layout.html
@@ -66,18 +66,15 @@
         </div>
         <div class="navbar-end" >
                 <div class="flex">
-                    <label for="my_modal_6" class="btn btn-sm btn-primary border-none align-items-center w-full" style="background-color: #03FA6E; color: #121212">Compliance</label>
+                    <label for="my_modal_6" class="btn btn-sm btn-primary border-none align-items-center w-full" style="background-color: #03FA6E; color: #121212">Guideline</label>
 
                     <input type="checkbox" id="my_modal_6" class="w-1/3 modal-toggle modal-warning" style="color: #FF0000;"/>
                     <div class="modal" style="color: #121212;">
                         <div class="modal-box">
-                            <h3 class="font-bold text-2xl mb-4">Challenger Compliance 🔥</h3>
+                            <h3 class="font-bold text-2xl mb-4">Challenger Guideline 🔥</h3>
                             <p class="py-2" style="color: #121212;">1. 회원 가입 시 가입 축하금으로 1,000p가 지급됩니다.</p>
                             <p class="py-2">2. 챌린지는 모집 중이거나 개인이 생성하여 참여할 수 있으며,<br style="margin-top: 8px;"> 입장 시 포인트가 차감됩니다.</p>
-                            <p class="py-2">3. 인증글은 여러 개 작성 가능하지만, 하루 하나의 인증글만 <br style="margin-top: 8px;">달성률이 체크됩니다.</p>
-                            <p class="py-2">4. 인증 확인은 인증글과 이미지를 업로드를 통해 이루어지며, <br style="margin-top: 8px;">포스트 작성 시 1p가 지급됩니다.</p>
-                            <p class="py-2">5. 챌린지 완수시 달성한 멤버에게 누적 입장포인트의 1/n하여 지급됩니다.</p>
-                            <p class="py-2">6. 내부상점에서 포인트를 사용하여 다양한 아이템을 구매할 수 있습니다.</p>
+                            <p class="py-2">3. 내부상점에서 포인트를 사용하여 다양한 아이템을 구매할 수 있습니다.</p>
                             <div class="modal-action">
                                 <label for="my_modal_6" class="btn btn-sm btn-primary border-none align-items-center w-full" style="background-color: #03FA6E; color: #121212">닫기</label>
                             </div>
