--- a/src/main/resources/templates/usr/member/me.html
+++ b/src/main/resources/templates/usr/member/me.html
@@ -18,6 +18,13 @@
                 location.href = "/usr/inventory/me/change/" + itemId;
             }
         }
+
+        function changeNickname(){
+            var nickname = document.getElementsByName('nickname')[0].value;
+            if(confirm(nickname+ ' 변경 하시겠습니까?')){
+                location.href = "/usr/member/change/" + nickname;
+            }
+        }
     </script>
     <div class="container mx-auto px-10" style="padding-top: 80px;">
         <div class="container mx-auto">
@@ -54,7 +61,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="bg-white rounded-t-none rounded-b-md h-20" th:style="'background-color: #' + ${@rq.member.equippedFont.item.pattern} +'; color: #' + ${@rq.member.equippedFont.item.subPattern}">
                         <div class="flex justify-between items-center">
                             <div style="padding-left: 25px; padding-top: 10px;">
@@ -68,11 +74,33 @@
                                 }
                             </style>
                             <div style="padding-right: 15px; margin-left: 0px; margin-top: 35px;">
-                                <a class="btn btn-xs mx-2 btn-custom">닉네임 변경</a>
+                                <label for="my_modal_3" class="btn btn-xs mx-2 btn-custom">닉네임 변경</label>
+                                <input type="checkbox" id="my_modal_3" class="w-1/3 modal-toggle modal-warning"/>
+                                <div class="modal">
+                                    <div class="modal-box">
+                                        <h3 class="font-bold text-lg text-black">Change NickName!!✔</h3>
+                                        <style>
+                                            .custom-input {
+                                                background-color: #ffffff;
+                                                border: 1px solid #03fa6e;
+                                                transition: border-color 0.3s;
+                                            }
+                                            .custom-input:focus {
+                                                outline: none;
+                                                border-width: 2px;
+                                                border-color: #03fa6e;
+                                            }
+                                        </style>
+                                        <input type="text" name="nickname" placeholder="닉네임 (2~8자)" class="input input-bordered input-info w-full max-w-xs mt-5 text-black custom-input" />
+                                        <div class="modal-action">
+                                            <button class="btn btn-md border-none" style="background-color: #03FA6E; color: #121212" onclick="changeNickname()">변경하기</button>
+                                            <label for="my_modal_3" class="btn btn-md">X</label>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
-
                 </div>
 
                 <div class="flex-1">
@@ -144,6 +172,7 @@
 
         </div>
         </div>
+    </div>
     </div>
 </main>
 
