--- a/src/main/resources/templates/usr/challenge/postdetail.html
+++ b/src/main/resources/templates/usr/challenge/postdetail.html
@@ -135,11 +135,12 @@
 
                         <div class="flex items-center justify-center mt-2" th:if="${@rq.member.loginID == post.creatorId}">
                             <a class="btn btn-accent mx-2 custom-btn border-none" th:href="@{|/usr/challenge/modifypost/${post.id}|}">수정하기</a>
-                            <button class="btn btn-accent mx-2 custom-btn border-none" th:attr="onclick='wantDelete(\'' + ${post.id} + '\', \'' + ${post.postTitle} + '\')'">삭제하기</button>
                             <h2 class="mx-2 mt-3">OR</h2>
-                            <button class="mx-2 btn btn-warning btn-outline custom-btn btn-heart">
-                                <i class="fa-solid fa-heart" style="color: #40dd84;"></i>
-                            </button>
+                            <button class="btn btn-accent mx-2 custom-btn border-none" th:attr="onclick='wantDelete(\'' + ${post.id} + '\', \'' + ${post.postTitle} + '\')'">삭제하기</button>
+<!--                            <h2 class="mx-2 mt-3">OR</h2>-->
+<!--                            <button class="mx-2 btn btn-warning btn-outline custom-btn btn-heart">-->
+<!--                                <i class="fa-solid fa-heart" style="color: #40dd84;"></i>-->
+<!--                            </button>-->
                         </div>
 
 
