--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,13 +20,7 @@
 </head>
 <body>
 </body>
-<main layout:fragment="main" class="flex flex-col w-full min-h-screen bg-[#121212] text-white">
-    <!--  네브바 시작  -->
-
-    <!--  네브바 끝  -->
-
-
-    <!--  헤더 시작  -->
+<main layout:fragment="main" class="flex flex-col w-full md: w-auto bg-[#121212] text-white">
     <header class="flex w-full justify-between">
         <section class="flex">
             <img src="https://kr.object.ncloudstorage.com/devchall/devchall_img/logoXL.png" alt="DevChall" class="w-[200px] h-[200px] flex-shrink-0 mx-10 p-2">
@@ -81,7 +75,7 @@
 
 
 
-    <section class="bg-[#F2F4F4] h-full flex flex-col items-center" style="border-top-left-radius: 4rem;">
+    <section class="bg-[#F2F4F4] w-full md:w-auto h-full flex flex-col items-center" style="border-top-left-radius: 4rem;">
 
         <!--    나의 챌린지  -->
         <article th:if="${@rq.login}" class="p-5 mx-5">
@@ -192,7 +186,7 @@
         </article>
         <!--    챌린지 리스트 끝-->
         <!-- 페이징 시작-->
-        <div class="join pb-10"
+        <div class="join pb-10 flex justify-center"
              th:if="${!challenges.isEmpty()}">
             <a th:if="${challenges.hasPrevious}"
                class="join-item btn btn btn-sm btn-outline"
