--- a/src/main/resources/templates/usr/member/layout.html
+++ b/src/main/resources/templates/usr/member/layout.html
@@ -29,12 +29,19 @@
         html > body {
             font-family: 'NanumSquare';
             text-underline-position: under;
-            height: 100%;
+            height: auto;
             padding: 0px;
             margin: 0px;
         }
         #wrap {
-            min-height: calc(100% - 120px);
+            height: auto;
+            min-height: calc(100% - 60px);
+        }
+        footer{
+            width: 100%;
+            height: 60px; /* footer의 높이 */
+            position : relative;
+            transform : translateY(0%);
         }
 
     </style>
@@ -52,7 +59,6 @@
 <link href="https://cdn.jsdelivr.net/npm/daisyui@2.51.5/dist/full.css" rel="stylesheet" type="text/css"/>
 <script src="https://cdn.tailwindcss.com"></script>
 <!--네브바 시작-->
-
 <nav>
     <div class="navbar text-accent bg-[#121212]">
         <div class="navbar-start">
@@ -120,6 +126,7 @@
     </div>
 </nav>
 <!--네브바 끝-->
+
 <div id="wrap">
 <main layout:fragment="main" class="flex-1"></main>
 
@@ -163,5 +170,5 @@
         </div>
     </div>
 </footer>
-
+</div>
 </html>
